RESOLVED FIXED30201
op_calls crash when !ENABLE(JIT_OPTIMIZE_CALL) && USE(JSVALUE32_64)
https://bugs.webkit.org/show_bug.cgi?id=30201
Summary op_calls crash when !ENABLE(JIT_OPTIMIZE_CALL) && USE(JSVALUE32_64)
Zoltan Herczeg
Reported 2009-10-08 01:16:49 PDT
Simple bug, simple fix.
Attachments
Fix for the bug (2.79 KB, patch)
2009-10-08 01:25 PDT, Zoltan Herczeg
barraclough: review+
Zoltan Herczeg
Comment 1 2009-10-08 01:25:11 PDT
Created attachment 40858 [details] Fix for the bug
Gavin Barraclough
Comment 2 2009-10-08 01:28:23 PDT
Comment on attachment 40858 [details] Fix for the bug Awesome!
Gavin Barraclough
Comment 3 2009-10-08 02:55:25 PDT
Sending JavaScriptCore/ChangeLog Sending JavaScriptCore/jit/JITCall.cpp Transmitting file data .. Committed revision 49293.
Note You need to log in before you can comment on or make changes to this bug.