Fix for JIT'ed op_call instructions (evals, constructs, etc.) when !ENABLE(JIT_OPTIMIZE_CALL) && USE(JSVALUE32_64)

Patch by Zoltan Herczeg <zherczeg@inf.u-szeged.hu> on 2009-10-08
Reviewed by Gavin Barraclough.

https://bugs.webkit.org/show_bug.cgi?id=30201

* jit/JITCall.cpp:
(JSC::JIT::compileOpCall):



Canonical link: https://commits.webkit.org/40852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49293 268f45cc-cd09-0410-ab3c-d52691b4dbfc